Fixed visual wrapper invisible on mobile

--- a/css/homepage.css
+++ b/css/homepage.css
@@ -372,7 +372,7 @@ header {
         border-bottom: 1px solid var(--divider-gray);
     }
     
-    .third-row-article .article-visual {
+    .third-row-article .article-visual-wrapper {
         display: block;
     }
 
